# appfx-cosmosdb

./: .env.example  .gitignore  .mailmap  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API_REFERENCE.md  API_REFERENCE_MONGO.md  API_REFERENCE_SQL.md  HANDS_ON_GUIDE.md  index.md
examples/: README.md  mongo_basic.py  sql_basic.py
src/appfx/cosmosdb/_base/: __init__.py  model_base.py  repository_base.py
src/appfx/cosmosdb/mongo/: __init__.py  model.py  repository.py
src/appfx/cosmosdb/sql/: __init__.py  model.py  repository.py
tests/: test_base_models.py  test_base_repository.py  test_import.py  test_live_integration.py  test_mongo_model.py  test_mongo_repository.py  test_sql_model.py  test_sql_query_builder.py  test_sql_repository.py  test_thread_safety.py
