[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appfx-cosmosdb"
version = "0.1.0"
description = "Python helpers for Azure Cosmos DB SQL and MongoDB APIs."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "DB Lee", email = "dongbum@outlook.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.11.5",
]

[project.optional-dependencies]
sql = [
  "azure-cosmos>=4.9.0",
  "azure-identity>=1.22.0",
]
mongo = [
  "pymongo>=4.13.2",
]
all = [
  "azure-cosmos>=4.9.0",
  "azure-identity>=1.22.0",
  "pymongo>=4.13.2",
]
dev = [
  "build>=1.2",
  "mypy>=1.9",
  "pytest>=8.4",
  "pytest-asyncio>=1.0",
  "pytest-cov>=6.2",
  "ruff>=0.5",
  "twine>=6.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["appfx*"]
namespaces = true

[tool.setuptools.package-data]
"appfx.cosmosdb" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["appfx.cosmosdb"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
packages = ["appfx.cosmosdb"]
strict = true
warn_unused_configs = true